# workspace-cleaner

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: main.rs  parsing.rs
src/init/: init.rs
src/parsing/: parse.rs
src/resources/: c.toml  cpp.toml  dart_flutter.toml  go.toml  haskell.toml  java_kotlin.toml  js_ts.toml  php.toml  python.toml  ruby.toml  rust.toml  swift.toml  zig.toml
