[package]
name = "ws-clean"
version = "0.3.0"
edition = "2024"
rust-version = "1.93.0"
description = "A simple cleanup tool for code workspaces"
license-file = "LICENSE"
authors = ["Elflo"]

[dependencies]
walkdir = "2.5.0"
regex = "1.12.3"
toml = "1.1.2"
clap = { version = "4.5.32", features = ["derive"] }
inquire = "0.9.4"
